Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91264

ASSERT on shutdown in Qt Wayland

XMLWordPrintable

    • Linux/Wayland
    • b19b0fbaf775e8b8eda1e03c265a5393d618c6c0 (qt/qtwayland/dev) a3ee3b1ac6752cb1e1bf86f8ef972f7d410e1d50 (qt/tqtc-qtwayland/5.15) c0ef4aa9529453197245f2db36df1d6b064e8532 (qt/qtwayland/6.1)

      Tested with pure-qml compositor and "shadereffects" example from Qt Quick, the following assert inside blit happens on shutdown:

      ASSERT: "window->wlSurface()" in file src/hardwareintegration/client/wayland-egl/qwaylandglcontext.cpp, line 195
      

        For Gerrit Dashboard: QTBUG-91264
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes